@@ -57,6 +57,8 @@ o  New function LinExpression operator+(const LinExpression&): previously
    an expressions like `+x2-x3-x4 <= 0' could not constitute valid syntax
    for a constraint.
 
+o  Added a a parameter to Polyhedron::shrink_bounding_box()...
+
 
 Bugfixes
 ========
